@@ -1,3 +1,7 @@
+Tue Feb  7  17:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gnubg.c: change get install dir to look at path to exe (windows)
+
 Tue Feb  2  19:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkgamelist.c: Remove gtk loop, hopefully fixing "can't move" bug
